<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/main_layout_padding"
    tools:context=".activity.ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/lato_regular"
            android:text="@string/forgot_password"
            android:textColor="@color/fontColorBlack"
            android:textSize="@dimen/text_header" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:fontFamily="@font/lato_medium"
            android:text="@string/forgot_desc"
            android:textColor="@color/fontColorBlack60"
            android:textSize="@dimen/text_medium" />

        <com.webclues.IPPSOperator.view.MaterialEditText
            android:id="@+id/edtEmailForgot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="start"
            android:hint="@string/email_address"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/fontColorBlack50"
            android:textSize="@dimen/text_medium"
            app:met_errorColor="@color/red"
            app:met_floatingLabel="highlight"
            app:met_typeface="@string/font_medium" />


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/tvsend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/lato_bold"
            android:gravity="center"
            android:text="@string/send"
            android:textColor="@color/white"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:textAllCaps="true"
                android:text="@string/back_to"
                android:textColor="@color/colorlightgray"
                android:textSize="@dimen/text_medium" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvhome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/lato_bold"
                android:gravity="center"
                android:padding="@dimen/_5sdp"
                android:text="@string/login"
                android:textColor="@color/fontColorBlue"
                android:textSize="@dimen/text_big" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>