<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/main_layout_padding"
    android:gravity="center"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_regular"
        android:text="@string/change_password"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/text_header"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_medium"
        android:text="@string/change_pass_content"
        android:textColor="@color/fontColorReguler"
        android:textSize="@dimen/_14sdp"
        android:visibility="gone" />

    <com.webclues.IPPSOperator.view.MaterialEditText
        android:id="@+id/edtOldPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="start"
        android:hint="@string/old_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textColor="@color/fontColorBlack50"
        android:textSize="@dimen/text_medium"
        app:met_errorColor="@color/red"
        app:met_floatingLabel="normal"
        app:met_typeface="@string/font_medium" />


    <com.webclues.IPPSOperator.view.MaterialEditText
        android:id="@+id/edtNewPassWord"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/new_password"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textColor="@color/fontColorBlack50"
        android:textSize="@dimen/text_medium"
        app:met_errorColor="@color/red"
        app:met_floatingLabel="normal"
        app:met_typeface="@string/font_medium" />


    <com.webclues.IPPSOperator.view.MaterialEditText
        android:id="@+id/edtConformPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="start"
        android:hint="@string/confirm_password"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        android:maxLength="15"
        android:textColor="@color/fontColorBlack50"
        android:textSize="@dimen/text_medium"
        app:met_errorColor="@color/red"
        app:met_floatingLabel="normal"
        app:met_typeface="@string/font_medium" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_120sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/change_password"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvCancle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:padding="@dimen/_10sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/fontColorBlack50"
        android:textSize="@dimen/text_medium"
        android:visibility="gone" />
</LinearLayout>