<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/_15sdp"
    tools:context=".activity.RequestSucessActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_70sdp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_successfully" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_medium"
        android:text="@string/query_successfully_sent"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/_25sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/lato_medium"
        android:padding="@dimen/_3sdp"
        android:gravity="center"
        android:text="@string/lbl_request_success"
        android:textColor="@color/fontColorBlack50"
        android:textSize="@dimen/text_medium" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBackToHome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/back_to_home"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />


</LinearLayout>