<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activity.SplashActivity">

    <ImageView
        android:id="@+id/ivsplash"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/ic_splash_logo"
        android:contentDescription="@string/app_name"
        android:scaleType="center" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tviot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/iot"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/_24sdp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/maintenance_app"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/_24sdp" />

</LinearLayout>