<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/main_layout_padding">

    <com.webclues.IPPSOperator.view.MaterialEditText
        android:id="@+id/edtSubject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:gravity="start"
        android:hint="@string/subject"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences"
        android:textColor="@color/fontColorBlack"
        android:textColorHint="@color/fontColorBlack50"
        android:textSize="@dimen/text_medium"
        app:met_errorColor="@color/red"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@color/fontColorBlack50"
        app:met_typeface="@string/font_medium" />


    <com.webclues.IPPSOperator.view.MaterialEditText
        android:id="@+id/edtMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="start"
        android:hint="@string/message"
        android:imeOptions="actionNext"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="3"
        android:minHeight="@dimen/_90sdp"
        android:textColor="@color/fontColorBlack"
        android:textSize="@dimen/text_medium"
        app:met_errorColor="@color/red"
        app:met_floatingLabel="normal"
        app:met_floatingLabelTextColor="@color/fontColorBlack40"
        app:met_textColorHint="@color/fontColorBlack40"
        app:met_typeface="@string/font_medium" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_60sdp"
        android:background="@color/colorPrimary"
        android:fontFamily="@font/lato_bold"
        android:gravity="center"
        android:text="@string/send"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/text_medium" />


</LinearLayout>